# localfiles

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: indexer_bench.rs
src/: indexer.rs  main.rs  server.rs  watcher.rs
