[package]
name = "localfiles"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tantivy = "0.22"
notify = "7"
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexer_bench"
harness = false
